--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
+    environment: Test_Env
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
